Changes in @NEW@:
  o Build Changes:
    * All files in "binary directories" now provide their path. (CNY-930)
    * ELF files that have no DT_NEEDED or DT_SONAME entries no
      longer cause Conary to trace back attempting to discover
      the ELF ABI. (CNY-1072)
    * Config files, though added to the :config component by
      default (CNY-172), can now be appropriately overridden
      by ComponentSpec. (CNY-1107)
    * The previous fix for CNY-699 wrongly encoded the soname rather
      than the filename in provisions for symbolic links to shared
      libraries when the shared library had a soname.  Additionally,
      symlinks from directories not in the system shared library
      path to ELF shared libraries in directories in the shared
      library path wrongly caused internal dependencies to have the
      full path to the symlink encoded in the shared library
      requirement.  These bugs have been resolved. (CNY-1088)
    * Conary will no longer attempt to update troves in the namespace "local"
      when using updateall.
    * Redirect recipes which contain conflicting redirects now give an
      error message instead of a traceback (CNY-449)

Changes in 1.0.39:
  o Client Changes:
    * A signature callback has been added, which allows one to catch
      the troves with bad signatures and react appropriately (display
      an error message, lower trust level, etc). (CNY-1008)
    * The conary.lib.logparse module has been added to provide
      parsed access to conary log files. (CNY-1075)
    * Added addRemoveRedirect() to allow redirecting packages to nothing
      (which causes them to be erased on update). Updated the client
      code to remove package components properly for this case (CNY-764)

  o Build Changes:
    * A "commitRelativeChangeset" configuration variable has been
      added to control whether Conary creates relative or absolute
      changesets when cooking.  It defaults to True, but can be